force-app/main/default/objects/Return_Request__c/Return_Request__c.object-meta.xml
<CustomObject>
    <label>Return Request</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Return Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>