force-app/main/default/objects/Return_Request__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Processed Return Requests</relationshipLabel>
    <relationshipName>Processed_Return_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>