force-app/main/default/objects/Return_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Return Requests</relationshipLabel>
    <relationshipName>Return_Requests</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>