force-app/main/default/objects/Return_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Product</fullName>
                <default>true</default>
                <label>Damaged Product</label>
            </value>
            <value>
                <fullName>Defective Product</fullName>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
            <value>
                <fullName>Missing Parts</fullName>
            </value>
            <value>
                <fullName>Warranty Claim</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>