force-app/main/default/objects/Return_Request__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <label>RMA Number</label>
    <type>Text</type>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>