force-app/main/default/objects/Return_Request__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <type>Lookup</type>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Return Requests</relationshipLabel>
    <relationshipName>Return_Requests</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>