force-app/main/default/objects/Return_Request__c/fields/Sales_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Item__c</fullName>
    <label>Sales Order Item</label>
    <type>Lookup</type>
    <referenceTo>Sales_Order_Item__c</referenceTo>
    <relationshipLabel>Return Requests</relationshipLabel>
    <relationshipName>Return_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>